Better fix of the conflict between popups/collapse events #40

--- a/src/frontend/src/app/home-page/popups/popups.component.css
+++ b/src/frontend/src/app/home-page/popups/popups.component.css
@@ -5,9 +5,9 @@
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 80px;
+  /* left: 80px;
   width: calc(100% - 80px);
-  height: 100%;
+  height: 100%; */
   overflow: auto;
   transition: 0.3s;
 }
@@ -19,7 +19,7 @@
   height: calc(100% - 300px);
 }
 
-.popup-full-collapsed {
+.popup-full-uncollapsed {
   left: 80px;
   width: calc(100% - 80px);
 
